# OCaMLearn

./: .gitignore  Design.md  OCaMLearn.opam  README.md  command.txt  dataset_design.md  dune  dune-project  mock_use.ml  ndarray_design.md  tensor_design.md
Design_Report/: dataset_design.md  layer_module_design.md  ndarray_design.md  optimizer_design.md  tensor_design.md
Design_Report/libs/: dataloader.mli  model.mli  optimizer.mli  tensor.mli
_build/: log
_coverage/: index.html
_coverage/src/lib/: ndarray.ml.html  tensor.ml.html
_coverage/src/test/: ndarray_tests.ml.html  tensor_tests.ml.html
lib/: dataloader.mli  dataset.mli  dune  linear.ml  loss.mli  model.ml  model.mli  ndarray.mli  nn.mli  optimizer.mli  tensor.ml  tensor.mli  transform.mli  utils.mli
src/lib/: dataloader.ml  dataloader.mli  dataset.ml  dataset.mli  dune  model.ml  model.mli  ndarray.ml  ndarray.mli  optimizer.ml  optimizer.mli  tensor.ml  tensor.mli  transform.ml  transform.mli  utils.ml  utils.mli
src/test/: dune  ndarray_tests.ml  tensor_tests.ml
test/: dune
