  (lang dune 3.16)
  (generate_opam_files true)
  (authors "Suizhi Ma" "Chuan Chen" "Jixiao Zhang" "Rui Wang")
  (maintainers "ulmd06@gmail.com")
  (package
   (name MLCaml) ; put in your own project name here
   (allow_empty)
   (synopsis "An OCaml library for Machine Learning Framework")
   (description "A machine learning library in OCaml, inspired by PyTorch, to provide the essential components for building and training machine learning models.")
   (depends
    (ounit2 (>= 2.2.7)) ; for each opam dependency list the version
    (core (>= 0.17.1)) ; `opam list core` will display which version of core you have
    (csv (>= 2.4)) ;
 ))