(lang dune 3.16)

(name OCaMLearn)

(source
 (github Maximus-MA/OCaMLearn))

(authors "Suizhi Ma" "Chuan Chen" "Jixiao Zhang" "Rui Wang")

(maintainers "Suizhi Ma")

(license LICENSE)

(package
 (name OCaMLearn)
 (synopsis "An OCaml library for Machine Learning Framework")
 (description "A machine learning library in OCaml, inspired by PyTorch, to provide the essential components for building and training machine learning models.")
 (depends ocaml dune csv))

