(library
 (name ndarray)
 (modules ndarray)
 (libraries core)
 (preprocess (pps bisect_ppx)))

(library
 (name tensor)
 (modules tensor)
 (libraries core ndarray)
 (preprocess (pps bisect_ppx)))

(library
 (name model)
 (modules model)
 (libraries core tensor))

(library
 (name optimizer)
 (modules optimizer)
 (libraries core tensor))

(library
 (name transform)
 (modules transform)
 (libraries core tensor))

(library
 (name dataset)
 (modules dataset)
 (libraries core ndarray))

(library
 (name dataloader)
 (modules dataloader)
 (libraries core tensor dataset transform))

(library
 (name utils)
 (modules utils)
 (libraries core tensor))